--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <p><b>Settings:</b> The Settings menu allows you to adjust several settings:</p>
       <ul>
         <li><b>Min/Max Trees</b>: How many trees are there in a game? (The minimum
-        must be at least three, and the maximum must be at most 12.)</li>
+        must be at least three, and the maximum must be at most twelve.)</li>
         <li><b>Threefold repetition</b>: In the baseline version of the game, there is 
           no way for the pyromaniac to win, other than the firefighter giving up. 
           If this setting is changed to "Yes," then the pyromaniac wins if the game is 
