--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <base href="/" />
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./assets/tree.png" />
+    <link rel="icon" type="image/svg+xml" href="./tree.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tree Game</title>
   </head>
