--- a/index.html
+++ b/index.html
@@ -41,6 +41,43 @@
         computer-controlled firefighter will take a trivial win if available, i.e.,
         if the firefighter can win before the pyromaniac gets another turn.)</li>
       </ul>
+      <p>
+        <b>Credits:</b> 
+        <ul>
+          <li>
+            The idea of the game has been around for a while. The particular
+            description in terms of a firefighter and a pyromaniac is from
+            the 
+            <a href="https://cims.nyu.edu/~tjl8195/CMUMC_POTD_Book.pdf">
+              Carnegie Mellon University Math Club Problem of the Day
+            </a> 
+            (Problem 15).
+          </li>
+          <li>
+            The fire image used in the game is from
+            <a href="http://www.clker.com/clipart-414743.html">
+              http://www.clker.com/clipart-414743.html
+            </a>.
+          </li>
+          <li>
+            The tree image used in the game is from 
+            <a href = "http://www.publicdomainfiles.com/show_file.php?id=13925582418820">
+              http://www.publicdomainfiles.com/show_file.php?id=13925582418820
+            </a>.
+          </li>
+          <li>
+            The firefighter helmet image used in the game is from 
+            <a href = "https://creazilla.com/media/clipart/67571/firefighter-hat">
+              https://creazilla.com/media/clipart/67571/firefighter-hat
+            </a>.
+          </li>
+          <li>
+            The torch image used in the game is from 
+            <a href="https://www.pngwing.com/en/free-png-bucho">
+              https://www.pngwing.com/en/free-png-bucho
+            </a>.
+          </li>
+        </ul>
     </div>
   </body>
 </html>
