--- a/index.html
+++ b/index.html
@@ -53,23 +53,23 @@
           </li>
           <li>
             The fire image used in the game is from
-            <a href="http://www.clker.com/clipart-414743.html">
-              http://www.clker.com/clipart-414743.html</a>.
+            <a href="https://www.clker.com/clipart-414743.html">
+              clker.com/clipart-414743.html</a>.
           </li>
           <li>
             The tree image used in the game is from 
-            <a href = "http://www.publicdomainfiles.com/show_file.php?id=13925582418820">
-              http://www.publicdomainfiles.com/show_file.php?id=13925582418820</a>.
+            <a href = "https://www.publicdomainfiles.com/show_file.php?id=13925582418820">
+              publicdomainfiles.com/show_file.php?id=13925582418820</a>.
           </li>
           <li>
             The firefighter helmet image used in the game is from 
             <a href = "https://creazilla.com/media/clipart/67571/firefighter-hat">
-              https://creazilla.com/media/clipart/67571/firefighter-hat</a>.
+              creazilla.com/media/clipart/67571/firefighter-hat</a>.
           </li>
           <li>
             The torch image used in the game is from 
             <a href="https://www.pngwing.com/en/free-png-bucho">
-              https://www.pngwing.com/en/free-png-bucho</a>.
+              pngwing.com/en/free-png-bucho</a>.
           </li>
         </ul>
     </div>
