Fix link in credits

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </li>
           <li>
             The tree image used in the game is from 
-            <a href = "https://www.publicdomainfiles.com/show_file.php?id=13925582418820">
+            <a href = "http://www.publicdomainfiles.com/show_file.php?id=13925582418820">
               publicdomainfiles.com/show_file.php?id=13925582418820</a>.
           </li>
           <li>
